Fix video on mobile

--- a/client/sass/pages/_gallery.scss
+++ b/client/sass/pages/_gallery.scss
@@ -12,3 +12,7 @@ img.gallery {
 .col-7.gallery {
 	text-align: right;
 }
+
+#sal-vid {
+	max-width: 100%;
+}
